--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -2,3 +2,7 @@
   display: flex;
   align-items: center;
 }
+
+body {
+  font-size: 200% !important; /* Increase all font size for the whole document but keep aspects between different elements */
+}
